# esi-projet-fil-rouge

./: .gitignore  .gitlab-ci.yml  Dockerfile.k6  architecture_backend.md  architecture_frontend.md  compose.yml  presentation_projet.html  start.sh  structure_projet_medisecure.md  test.js
medisecure-backend/: .env.example  .gitignore  Dockerfile  compose.yml  create_admin.py  docker-compose.yml  fix_uuid_imports.sh  init.sql  pyproject.toml  requirements.txt  start.sh
medisecure-backend/alembic/: env.py
medisecure-backend/api/: main.py
medisecure-backend/api/controllers/: auth_controller.py
medisecure-backend/api/handlers/: exceptions_handlers.py
medisecure-backend/api/middlewares/: authentication_middleware.py
medisecure-backend/appointment_management/application/dtos/: appointment_dtos.py
medisecure-backend/appointment_management/application/usecases/: get_patient_appointments_usecase.py  schedule_appointment_usecase.py  update_appointment_usecase.py
medisecure-backend/appointment_management/domain/entities/: appointment.py
medisecure-backend/appointment_management/domain/services/: appointment_service.py
medisecure-backend/patient_management/application/dtos/: patient_dtos.py
medisecure-backend/patient_management/application/usecases/: create_patient_folder_usercase.py  get_patient_usecase.py  update_patient_usecase.py
medisecure-backend/patient_management/domain/entities/: patient.py
medisecure-backend/shared/adapters/primary/: fixed_id_generator.py  (+1 more)
medisecure-backend/shared/container/: container.py
medisecure-backend/tests/: conftest.py
(+74 files in other folders)
